Properly build Linux REH

--- a/packaging/Makefile
+++ b/packaging/Makefile
@@ -2,7 +2,6 @@ SHELL := /usr/bin/env zsh
 .SECONDEXPANSION:
 
 LINUX_PLATFORMS := linux-arm64 linux-x64
-REH_PLATFORMS := darwin-arm64 $(LINUX_PLATFORMS)
 
 BASE_COMMIT := $(shell scripts/get-base-commit.sh)
 MACOS_DOTAPP_NAME := $(shell scripts/get-app-name.py)
@@ -27,13 +26,16 @@ MACOS_REH_TARGET_NAME := vscode-reh-darwin-arm64
 MACOS_REH_TARGET_UNPACKED := $(addprefix ../, $(MACOS_REH_TARGET_NAME))
 MACOS_REH_TARGET_IND := $(MACOS_REH_TARGET_UNPACKED)/bin/code-server-oss
 MACOS_REH_TARGET_ARCHIVE := $(addprefix out/, $(addsuffix .zip, $(MACOS_REH_TARGET_NAME)))
-MACOS_UNPACKED_TARGETS := $(MACOS_REH_TARGET_UNPACKED) $(MACOS_APP_TARGET_UNPACKED)
+LINUX_REH_TARGET_NAME := vscode-reh-linux-arm64
+LINUX_REH_TARGET_UNPACKED := $(addprefix ../, $(LINUX_REH_TARGET_NAME))
+LINUX_REH_TARGET_IND := $(LINUX_REH_TARGET_UNPACKED)/bin/code-server-oss
+UNPACKED_TARGETS := $(MACOS_REH_TARGET_UNPACKED) $(MACOS_APP_TARGET_UNPACKED) $(LINUX_REH_TARGET_UNPACKED)
 MACOS_ARCHIVE_TARGETS := $(MACOS_REH_TARGET_ARCHIVE) $(MACOS_APP_TARGET_ARCHIVE)
 
 # official release REH download
 REL_REH_WORKDIR := rel-reh/$(BASE_COMMIT)
 REL_REH_CHANNEL := stable
-REL_REH_TARGETS := $(addsuffix .tgz, $(addprefix $(REL_REH_WORKDIR)/vscode-server-, $(REH_PLATFORMS)))
+REL_REH_TARGETS := $(addsuffix .tgz, $(addprefix $(REL_REH_WORKDIR)/vscode-server-, $(LINUX_PLATFORMS)))
 
 $(REL_REH_WORKDIR)/vscode-server-%.tgz:
 	mkdir -p $(REL_REH_WORKDIR)
@@ -41,8 +43,8 @@ $(REL_REH_WORKDIR)/vscode-server-%.tgz:
 
 # Linux REH
 LINUX_REH_TARGETS := $(addprefix out/vscode-reh-, $(addsuffix .zip, $(LINUX_PLATFORMS)))
-out/vscode-reh-%.zip: $(REL_REH_WORKDIR)/vscode-server-%.tgz $(MACOS_REH_TARGET_IND)
-	scripts/package-linux-reh.sh $(MACOS_REH_TARGET_UNPACKED) $< $@
+out/vscode-reh-%.zip: $(REL_REH_WORKDIR)/vscode-server-%.tgz $(LINUX_REH_TARGET_IND) | work out
+	scripts/package-linux-reh.sh $(LINUX_REH_TARGET_UNPACKED) $< $@
 
 # build VSCode
 $(YARN_DEP_IND):
@@ -54,7 +56,12 @@ $(MACOS_REH_TARGET_IND): $(YARN_DEP_IND)
 
 $(MACOS_REH_TARGET_UNPACKED): $(MACOS_REH_TARGET_IND)
 
-$(MACOS_APP_TARGET_IND): $(YARN_DEP_IND) | work out
+$(LINUX_REH_TARGET_IND): $(YARN_DEP_IND)
+	scripts/build-vscode.sh ../vscode linux-reh
+
+$(LINUX_REH_TARGET_UNPACKED): $(LINUX_REH_TARGET_IND)
+
+$(MACOS_APP_TARGET_IND): $(YARN_DEP_IND)
 	scripts/build-vscode.sh ../vscode app
 	touch $@
 
@@ -65,10 +72,10 @@ $(MACOS_APP_TARGET_SIGN_IND): .signenv | $(MACOS_APP_TARGET_IND)
 $(MACOS_APP_TARGET_UNPACKED): $(MACOS_APP_TARGET_IND)
 
 # macOS archives
-$(MACOS_REH_TARGET_ARCHIVE): $(MACOS_REH_TARGET_IND)
+$(MACOS_REH_TARGET_ARCHIVE): $(MACOS_REH_TARGET_IND) | out
 	scripts/create-archive.sh $(MACOS_REH_TARGET_UNPACKED) $@
 
-$(MACOS_APP_TARGET_ARCHIVE): $(MACOS_APP_TARGET_IND)
+$(MACOS_APP_TARGET_ARCHIVE): $(MACOS_APP_TARGET_IND) | out
 	scripts/create-archive.sh "$(dir $<)/$(MACOS_DOTAPP_NAME)" $@
 
 # avoid parallelism on these targets, otherwise results will be incorrect
@@ -80,6 +87,6 @@ $(MACOS_APP_TARGET_ARCHIVE): $(MACOS_APP_TARGET_IND)
 clean:
 	@echo "Cleaning build artefacts and working files"
 	rm -rf work out
-	rm -rf $(MACOS_UNPACKED_TARGETS)
+	rm -rf $(UNPACKED_TARGETS)
 
 .PRECIOUS: $(REL_REH_TARGETS)
